demo/k8s/istio/backend.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: demoapp
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: backend
        tier: backend
    spec:
      serviceAccountName: demoapp-backend
      containers:
        - name: backend
          image: gvergne/demo-back
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: demoapp
spec:
  externalTrafficPolicy: Cluster
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: backend
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
