demo/k8s/istio/frontend.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: demoapp
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
        tier: frontend
    spec:
      serviceAccountName: demoapp-frontend
      containers:
        - name: frontend
          image: gvergne/demo-front
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 81

---

apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: demoapp
spec:
  externalTrafficPolicy: Cluster
  ports:
    - port: 81
      protocol: TCP
      targetPort: 81
  selector:
    app: frontend
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
