demo/k8s/istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: demoapp
  namespace: demoapp
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: demoapp
spec:
  hosts:
    - "*"
  gateways:
    - demoapp
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend
            port:
              number: 81

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
  namespace: demoapp
spec:
  hosts:
    - "*"
  gateways:
    - demoapp
  http:
    - match:
        - uri:
            prefix: /api/backend
      route:
        - destination:
            host: backend
            port:
              number: 8080
